# cuda_build_and_link_custom_library

./: README.md
Test/: Makefile
Test/src/: main.cu
include/: Function.cuh
lib/: CMakeLists.txt
src/: Function.cu
